--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,3 +1,12 @@
-{{#each persons}}
-    <p>{{this.id}}</p>
-{{/each}}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="main.css">
+    <title>Document</title>
+</head>
+<body>
+
+</body>
+</html>
