--- a/src/main.scss
+++ b/src/main.scss
@@ -1,4 +1,6 @@
-body {
-  color: blueviolet;
-  background-color: aquamarine;
+.nav-color {
+  background-color: #dd2a7a!important;
+}
+.logo-img {
+  height: 32px;
 }
