--- a/public/main.css
+++ b/public/main.css
@@ -1,3 +1,3 @@
-body{color:#8a2be2;background-color:#7fffd4}
+.nav-color{background-color:#dd2a7a!important}.logo-img{height:32px}
 
 /*# sourceMappingURL=main.css.map*/
