--- a/src/main.css
+++ b/src/main.css
@@ -1,6 +1,9 @@
-body {
-  color: blueviolet;
-  background-color: aquamarine;
+.nav-color {
+  background-color: #dd2a7a !important;
+}
+
+.logo-img {
+  height: 32px;
 }
 
 /*# sourceMappingURL=main.css.map */
