--- a/views/index.hbs
+++ b/views/index.hbs
@@ -13,7 +13,65 @@
 
 <body>
 
+
+<nav class="nav-color">
+    <div class="nav-wrapper">
+        <a href="#!" class="brand-logo right">Spun<img class="logo-img" src="images/unnamed.png" alt=""></a>
+        <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+        <ul class="hide-on-med-and-down left">
+            <li><a href=""><i class="material-icons left">home</i>Главная</a></li>
+            <li><a href=""><i class="material-icons left">apps</i>Меню</a></li>
+            <li><a href=""><i class="material-icons left">contacts</i>Контакты</a></li>
+            <li><a href=""><i class="material-icons left">shopping_basket</i>Корзина</a></li>
+            <li><a href=""><i class="material-icons left">person_outline</i>Войти</a></li>
+            <li class="disabled"><a>+7(912)999-99-99</a></li>
+        </ul>
+        <form>
+            <div class="input-field left">
+                <input id="search" type="search" placeholder="Поиск" required>
+                <label class="label-icon" for="search"><i class="material-icons">search</i></label>
+                <i class="material-icons">close</i>
+            </div>
+        </form>
+    </div>
+</nav>
+
+<ul class="sidenav" id="mobile-demo">
+    <li><a href=""><i class="material-icons left">home</i>Главная</a></li>
+    <li><a href=""><i class="material-icons left">apps</i>Меню</a></li>
+    <li><a href=""><i class="material-icons left">contacts</i>Контакты</a></li>
+    <li><a href=""><i class="material-icons left">shopping_basket</i>Корзина</a></li>
+    <li><a href=""><i class="material-icons left">person_outline</i>Войти</a></li>
+    <li class="disabled"><a>+7(912)999-99-99</a></li>
+</ul>
+
+<!--<nav class="blue-grey darken-1">-->
+<!--    <div class="nav-wrapper">-->
+<!--        <form>-->
+<!--            <div class="input-field">-->
+<!--                <input id="search" type="search" placeholder="Поиск" required>-->
+<!--                <label class="label-icon" for="search"><i class="material-icons">search</i></label>-->
+<!--                <i class="material-icons">close</i>-->
+<!--            </div>-->
+<!--        </form>-->
+<!--    </div>-->
+<!--</nav>-->
+
+<div class="row center">
+    <div class="col s4">6-columns (one-half)</div>
+    <div class="col s4">6-columns (one-half)</div>
+    <div class="col s4">6-columns (one-half)</div>
+</div>
+<div class="container">
+
+</div>
 <!--JavaScript at end of body for optimized loading-->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+<script>
+    document.addEventListener('DOMContentLoaded', function () {
+        const elements = document.querySelectorAll('.sidenav');
+        M.Sidenav.init(elements);
+    });
+</script>
 </body>
 </html>
