--- a/public/main.css
+++ b/public/main.css
@@ -1,3 +1,3 @@
-.nav-color{background-color:#dd2a7a!important}.logo-img{height:32px}
+.nav-color{background-color:#dd2a7a!important}.logo-img{height:32px}nav a,nav li a{text-decoration:none!important;color:#fff!important}
 
 /*# sourceMappingURL=main.css.map*/
