--- a/views/index.hbs
+++ b/views/index.hbs
@@ -5,7 +5,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <!--Let browser know website is optimized for mobile-->
     <link rel="stylesheet" href="main.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -16,11 +16,11 @@
 
 <nav class="nav-color">
     <div class="nav-wrapper">
-        <a href="#!" class="brand-logo right">Spun<img class="logo-img" src="images/unnamed.png" alt=""></a>
+        <a href="/" class="brand-logo right">Spun<img class="logo-img" src="images/unnamed.png" alt=""></a>
         <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         <ul class="hide-on-med-and-down left">
-            <li><a href=""><i class="material-icons left">home</i>Главная</a></li>
-            <li><a href=""><i class="material-icons left">apps</i>Меню</a></li>
+            <li><a href="/"><i class="material-icons left">home</i>Главная</a></li>
+            <li><a href=""><i class="material-icons left">apps</i>Товары</a></li>
             <li><a href=""><i class="material-icons left">contacts</i>Контакты</a></li>
             <li><a href=""><i class="material-icons left">shopping_basket</i>Корзина</a></li>
             <li><a href=""><i class="material-icons left">person_outline</i>Войти</a></li>
@@ -37,40 +37,90 @@
 </nav>
 
 <ul class="sidenav" id="mobile-demo">
-    <li><a href=""><i class="material-icons left">home</i>Главная</a></li>
-    <li><a href=""><i class="material-icons left">apps</i>Меню</a></li>
+    <li><a href="/"><i class="material-icons left">home</i>Главная</a></li>
+    <li><a href=""><i class="material-icons left">apps</i>Товары</a></li>
     <li><a href=""><i class="material-icons left">contacts</i>Контакты</a></li>
     <li><a href=""><i class="material-icons left">shopping_basket</i>Корзина</a></li>
     <li><a href=""><i class="material-icons left">person_outline</i>Войти</a></li>
     <li class="disabled"><a>+7(912)999-99-99</a></li>
 </ul>
-
-<!--<nav class="blue-grey darken-1">-->
-<!--    <div class="nav-wrapper">-->
-<!--        <form>-->
-<!--            <div class="input-field">-->
-<!--                <input id="search" type="search" placeholder="Поиск" required>-->
-<!--                <label class="label-icon" for="search"><i class="material-icons">search</i></label>-->
-<!--                <i class="material-icons">close</i>-->
-<!--            </div>-->
-<!--        </form>-->
+<div class="parallax-container">
+<!--    <div class="row center">-->
+<!--        <div class="col s4 blue lighten-5">6-columns (one-half)</div>-->
+<!--        <div class="col s4 blue lighten-5">6-columns (one-half)</div>-->
+<!--        <div class="col s4 blue lighten-5">6-columns (one-half)</div>-->
 <!--    </div>-->
-<!--</nav>-->
-
-<div class="row center">
-    <div class="col s4">6-columns (one-half)</div>
-    <div class="col s4">6-columns (one-half)</div>
-    <div class="col s4">6-columns (one-half)</div>
+    <div class="parallax">
+        <img src="images/food.jpg"></div>
 </div>
+<br>
+<!--<div class="section white">-->
+<!--    <div class="row container">-->
+<!--        <h2 class="header">Популярные товары:</h2>-->
+<!--    </div>-->
+<!--</div>-->
+<!--<div class="row center">-->
+<!--    <div class="col s4">6-columns (one-half)</div>-->
+<!--    <div class="col s4">6-columns (one-half)</div>-->
+<!--    <div class="col s4">6-columns (one-half)</div>-->
+<!--</div>-->
 <div class="container">
-
+    <div class="section white">
+        <div class="row container">
+            <h2 class="header">Популярные товары:</h2>
+        </div>
+    </div>
+    <div class="row row-cols-1 row-cols-md-3 center">
+        <div class="col mb-4">
+            <div class="card h-100">
+                <img src="images/pizza.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    <a class="waves-effect waves-light btn blue lighten-4"><i class="material-icons left">info_outline</i>Подробнее</a>
+                    <a class="waves-effect waves-light btn pink lighten-4"><i class="material-icons left">shopping_basket</i>Добавить</a>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
+<footer class="page-footer grey darken-4 center">
+    <div class="container">
+        <div class="row">
+            <div class="col l6 s12">
+                <h5 class="white-text">Footer Content</h5>
+                <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+            </div>
+            <div class="col l4 offset-l2 s12">
+                <h5 class="white-text">Links</h5>
+                <ul>
+                    <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
+                    <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
+                    <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
+                    <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div class="footer-copyright">
+        <div class="container">
+            © 2020 Двоеглазов Г.И., 171-331
+        </div>
+    </div>
+</footer>
 <!--JavaScript at end of body for optimized loading-->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 <script>
     document.addEventListener('DOMContentLoaded', function () {
         const elements = document.querySelectorAll('.sidenav');
         M.Sidenav.init(elements);
+    });
+    document.addEventListener('DOMContentLoaded', function() {
+        const elements = document.querySelectorAll('.parallax');
+        M.Parallax.init(elements);
     });
 </script>
 </body>
