--- a/views/login.hbs
+++ b/views/login.hbs
@@ -44,70 +44,72 @@
     <li><a href="/login"><i class="material-icons left">person_outline</i>Войти</a></li>
     <li class="disabled"><a>+7(912)999-99-99</a></li>
 </ul>
-<div class="parallax-container">
-<!--    <div class="row center">-->
-<!--        <div class="col s4 blue lighten-5">6-columns (one-half)</div>-->
-<!--        <div class="col s4 blue lighten-5">6-columns (one-half)</div>-->
-<!--        <div class="col s4 blue lighten-5">6-columns (one-half)</div>-->
-<!--    </div>-->
-    <div class="parallax">
-        <img src="images/food.jpg"></div>
-</div>
-<br>
-<!--<div class="section white">-->
-<!--    <div class="row container">-->
-<!--        <h2 class="header">Популярные товары:</h2>-->
-<!--    </div>-->
-<!--</div>-->
-<!--<div class="row center">-->
-<!--    <div class="col s4">6-columns (one-half)</div>-->
-<!--    <div class="col s4">6-columns (one-half)</div>-->
-<!--    <div class="col s4">6-columns (one-half)</div>-->
-<!--</div>-->
+<br><br>
 <div class="container">
-    <div class="section white">
-        <div class="row container">
-            <h2 class="header">Популярные товары:</h2>
-        </div>
-    </div>
-    <div class="row row-cols-1 row-cols-md-3 center">
-        <div class="col mb-4">
-            <div class="card h-100">
-                <img src="images/pizza.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                    <a class="waves-effect waves-light btn blue lighten-4"><i class="material-icons left">info_outline</i>Подробнее</a>
-                    <a class="waves-effect waves-light btn pink lighten-4"><i class="material-icons left">shopping_basket</i>Добавить</a>
+    <div class="row">
+        <form class="col s12">
+            <div class="row">
+                <div class="input-field col s6">
+                    <i class="material-icons prefix">email</i>
+                    <input id="email" type="email" class="validate">
+                    <label for="email">Email</label>
                 </div>
             </div>
-        </div>
+            <div class="row">
+                <div class="input-field col s12">
+                    <i class="material-icons prefix">lock_outline</i>
+                    <input id="password" type="password" class="validate">
+                    <label for="password">Пароль</label>
+                </div>
+            </div>
+<!--            <div class="row">-->
+<!--                <div class="input-field col s6">-->
+<!--                    <i class="material-icons prefix">tag_faces</i>-->
+<!--                    <input id="icon_prefix" type="text" class="validate">-->
+<!--                    <label for="icon_prefix">Имя</label>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            <div class="row">-->
+<!--                <div class="input-field col s6">-->
+<!--                    <i class="material-icons prefix">phone</i>-->
+<!--                    <input id="icon_telephone" type="tel" class="validate">-->
+<!--                    <label for="icon_telephone">Телефон</label>-->
+<!--                </div>-->
+<!--            </div>-->
+            <div class="row ml-2">
+                <a href="/register" class="waves-effect waves-light btn-small blue darken-1"><i class="material-icons left">person_add</i>Регистрация</a>
+            </div>
+            <div class="row right mr-2 ">
+                <a class="waves-effect waves-light btn-large pink lighten-3" type="submit">Войти</a>
+            </div>
+        </form>
     </div>
 </div>
-<footer class="page-footer grey darken-4 center">
-    <div class="container">
-        <div class="row">
-            <div class="col l6 s12">
-                <h5 class="white-text">Footer Content</h5>
-                <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
-            </div>
-            <div class="col l4 offset-l2 s12">
-                <h5 class="white-text">Links</h5>
-                <ul>
-                    <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
-                    <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
-                    <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
-                    <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
-                </ul>
-            </div>
-        </div>
-    </div>
-    <div class="footer-copyright">
-        <div class="container">
-            © 2020 Двоеглазов Г.И., 171-331
-        </div>
-    </div>
-</footer>
+
+<!--<footer class="page-footer grey darken-4 center">-->
+<!--    <div class="container">-->
+<!--        <div class="row">-->
+<!--            <div class="col l6 s12">-->
+<!--                <h5 class="white-text">Footer Content</h5>-->
+<!--                <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>-->
+<!--            </div>-->
+<!--            <div class="col l4 offset-l2 s12">-->
+<!--                <h5 class="white-text">Links</h5>-->
+<!--                <ul>-->
+<!--                    <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>-->
+<!--                    <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>-->
+<!--                    <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>-->
+<!--                    <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>-->
+<!--                </ul>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--    <div class="footer-copyright">-->
+<!--        <div class="container">-->
+<!--            © 2020 Двоеглазов Г.И., 171-331-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</footer>-->
 <!--JavaScript at end of body for optimized loading-->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
