--- a/views/index.hbs
+++ b/views/index.hbs
@@ -20,7 +20,7 @@
         <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         <ul class="hide-on-med-and-down left">
             <li><a href="/"><i class="material-icons left">home</i>Главная</a></li>
-            <li><a href=""><i class="material-icons left">apps</i>Товары</a></li>
+            <li><a href="/products"><i class="material-icons left">apps</i>Товары</a></li>
             <li><a href=""><i class="material-icons left">contacts</i>Контакты</a></li>
             <li><a href=""><i class="material-icons left">shopping_basket</i>Корзина</a></li>
             <li><a href="/login"><i class="material-icons left">person_outline</i>Войти</a></li>
@@ -38,7 +38,7 @@
 
 <ul class="sidenav" id="mobile-demo">
     <li><a href="/"><i class="material-icons left">home</i>Главная</a></li>
-    <li><a href=""><i class="material-icons left">apps</i>Товары</a></li>
+    <li><a href="/products"><i class="material-icons left">apps</i>Товары</a></li>
     <li><a href=""><i class="material-icons left">contacts</i>Контакты</a></li>
     <li><a href=""><i class="material-icons left">shopping_basket</i>Корзина</a></li>
     <li><a href="/login"><i class="material-icons left">person_outline</i>Войти</a></li>
