--- a/views/register.hbs
+++ b/views/register.hbs
@@ -51,34 +51,34 @@
             <div class="row">
                 <div class="input-field col s6">
                     <i class="material-icons prefix">email</i>
-                    <input id="email" type="email" class="validate">
+                    <input id="email" type="email" class="validate" required>
                     <label for="email">Email</label>
                 </div>
             </div>
             <div class="row">
                 <div class="input-field col s12">
                     <i class="material-icons prefix">lock_outline</i>
-                    <input id="password" type="password" class="validate">
+                    <input id="password" type="password" class="validate" required>
                     <label for="password">Пароль</label>
                 </div>
             </div>
                         <div class="row">
                             <div class="input-field col s6">
                                 <i class="material-icons prefix">tag_faces</i>
-                                <input id="icon_prefix" type="text" class="validate">
+                                <input id="icon_prefix" type="text" class="validate" required>
                                 <label for="icon_prefix">Имя</label>
                             </div>
                         </div>
                         <div class="row">
                             <div class="input-field col s6">
                                 <i class="material-icons prefix">phone</i>
-                                <input id="icon_telephone" type="tel" class="validate">
+                                <input id="icon_telephone" type="tel" class="validate" required>
                                 <label for="icon_telephone">Телефон</label>
                             </div>
                         </div>
 
             <div class="row right mr-2 ">
-                <a class="waves-effect waves-light btn-large blue lighten-4" type="submit">Регистрация</a>
+                <button type="submit" class="btn btn-primary right">Регистрация</button>
             </div>
         </form>
     </div>
