--- a/views/products.hbs
+++ b/views/products.hbs
@@ -22,11 +22,11 @@
             <li><a href="/"><i class="material-icons left">home</i>Главная</a></li>
             <li><a href="/products"><i class="material-icons left">apps</i>Товары</a></li>
             <li><a href=""><i class="material-icons left">contacts</i>Контакты</a></li>
-            <li><a href=""><i class="material-icons left">shopping_basket</i>Корзина</a></li>
+            <li><a href="/cart"><i class="material-icons left">shopping_basket</i>Корзина</a></li>
             <li><a href="/login"><i class="material-icons left">person_outline</i>Войти</a></li>
             <li class="disabled"><a>+7(912)999-99-99</a></li>
         </ul>
-        <form>
+        <form method="post" action="/find">
             <div class="input-field left">
                 <input id="search" type="search" placeholder="Поиск" required>
                 <label class="label-icon" for="search"><i class="material-icons">search</i></label>
@@ -44,15 +44,6 @@
     <li><a href="/login"><i class="material-icons left">person_outline</i>Войти</a></li>
     <li class="disabled"><a>+7(912)999-99-99</a></li>
 </ul>
-<div class="parallax-container">
-    <!--    <div class="row center">-->
-    <!--        <div class="col s4 blue lighten-5">6-columns (one-half)</div>-->
-    <!--        <div class="col s4 blue lighten-5">6-columns (one-half)</div>-->
-    <!--        <div class="col s4 blue lighten-5">6-columns (one-half)</div>-->
-    <!--    </div>-->
-    <div class="parallax">
-        <img src="images/food.jpg"></div>
-</div>
 <br>
 <!--<div class="section white">-->
 <!--    <div class="row container">-->
@@ -67,25 +58,30 @@
 <div class="container">
     <div class="section white">
         <div class="row container">
-            <h2 class="header">Популярные товары:</h2>
+            <h2 class="header">Все товары:</h2>
         </div>
     </div>
-    {{#each products}}
     <div class="row row-cols-1 row-cols-md-3 center">
+    {{#each products}}
+        <form method="post" action="/add">
+            <input id="id" name="id" type="text" value="{{this.id}}" hidden>
         <div class="col mb-4">
             <div class="card h-100">
                 <img src="{{this.image}}">
                 <div class="card-body">
                     <h5 class="card-title">{{this.name}}</h5>
                     <p class="card-text">{{this.description}}</p>
+                    <h2>{{this.price}} Р</h2>
                     <a href="product/{{this.id}}" class="waves-effect waves-light btn blue lighten-4"><i class="material-icons left">info_outline</i>Подробнее</a>
-                    <a class="waves-effect waves-light btn pink lighten-4"><i class="material-icons left">shopping_basket</i>Добавить</a>
+                    <button type="submit" class="btn btn-danger right"><i class="material-icons left">shopping_basket</i>Добавить</button>
                 </div>
             </div>
         </div>
+        </form>
+    {{/each}}
     </div>
-        {{/each}}
 </div>
+
 <footer class="page-footer grey darken-4 center">
     <div class="container">
         <div class="row">
