--- a/views/product.hbs
+++ b/views/product.hbs
@@ -85,6 +85,8 @@
         </table>
         <br>
         <h2 class="card-title">Цена: {{this.price}} Р</h2>
+        <br>
+        <button type="submit" class="btn btn-danger"><i class="material-icons left">shopping_basket</i>Добавить</button>
     </form>
     {{/each}}
 </div>
