--- a/views/cart.hbs
+++ b/views/cart.hbs
@@ -5,7 +5,8 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+          integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <!--Let browser know website is optimized for mobile-->
     <link rel="stylesheet" href="main.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -74,67 +75,112 @@
             </thead>
 
             <tbody>
-        {{#each products}}
-            {{#each this}}
-            <tr>
-                <td>{{this.name}}</td>
-                <td><form method="post" action="/cart/minus/{{this.id}}">
-                    <input id="id" name="id" type="number" value="{{this.id}}" hidden>
-                    <button type="submit" class="btn btn-primary"><i class="material-icons left">exposure_neg_1</i></button>
-                </form>{{this.count}}<form method="post" action="/cart/add/{{this.id}}">
-                    <input id="id" name="id" type="number" value="{{this.id}}" hidden>
-                    <button type="submit" class="btn btn-primary"><i class="material-icons left">exposure_plus_1</i></button>
-                </form></td>
-                <td>{{this.newPrice}} Р<form method="post" action="/cart/delete/{{this.id}}">
-                    <input id="id" name="id" type="number" value="{{this.id}}" hidden>
-                    <button type="submit" class="btn btn-danger"><i class="material-icons left">delete_forever</i></button>
-                </form></td>
-            </tr>
+            {{#each products}}
+                {{#each this}}
+                    <tr>
+                        <td>{{this.name}}</td>
+                        <td>
+                            <form method="post" action="/cart/minus/{{this.id}}">
+                                <input id="id" name="id" type="number" value="{{this.id}}" hidden>
+                                <button type="submit" class="btn btn-primary"><i class="material-icons left">exposure_neg_1</i>
+                                </button>
+                            </form>{{this.count}}
+                            <form method="post" action="/cart/add/{{this.id}}">
+                                <input id="id" name="id" type="number" value="{{this.id}}" hidden>
+                                <button type="submit" class="btn btn-primary"><i class="material-icons left">exposure_plus_1</i>
+                                </button>
+                            </form>
+                        </td>
+                        <td>{{this.newPrice}} Р
+                            <form method="post" action="/cart/delete/{{this.id}}">
+                                <input id="id" name="id" type="number" value="{{this.id}}" hidden>
+                                <button type="submit" class="btn btn-danger"><i class="material-icons left">delete_forever</i>
+                                </button>
+                            </form>
+                        </td>
+                    </tr>
+                {{/each}}
             {{/each}}
-        {{/each}}
             </tbody>
         </table>
         <br>
         <h2 class="right">Итого: {{allPrice}} Р</h2>
         <br>
         <br>
-        <div class="row">
-            <form class="col s12">
-                <div class="row">
-                    <div class="input-field col s6">
-                        <i class="material-icons prefix">person_outline</i>
-                        <input id="icon_prefix" type="text" class="validate" name="name" required>
-                        <label for="icon_prefix">Имя</label>
+        {{#if success}}
+            <div class="row">
+                <form class="col s12" method="post" action="/cart/order">
+                    <input name="allPrice" value="{{allPrice}}" hidden>
+                    <div class="row">
+                        <div class="input-field col s6">
+                            <i class="material-icons prefix">person_outline</i>
+                            <input id="icon_prefix" type="text" name="name" placeholder="{{user.name}}" value="{{user.name}}" required>
+                            <label for="icon_prefix">Имя</label>
+                        </div>
+                        <div class="input-field col s6">
+                            <i class="material-icons prefix">phone</i>
+                            <input id="icon_telephone" type="tel" name="tel" placeholder="{{user.tel}}" value="{{user.tel}}" required>
+                            <label for="icon_telephone">Телефон</label>
+                        </div>
                     </div>
-                    <div class="input-field col s6">
-                        <i class="material-icons prefix">phone</i>
-                        <input id="icon_telephone" type="tel" class="validate" name="tel" required>
-                        <label for="icon_telephone">Телефон</label>
+                    <div class="row">
+                        <div class="input-field col s8">
+                            <i class="material-icons prefix">streetview</i>
+                            <input id="icon_prefix" type="text" class="validate" name="street" required>
+                            <label for="icon_prefix">Улица</label>
+                        </div>
+                        <div class="input-field col s2">
+                            <i class="material-icons prefix">domain</i>
+                            <input id="icon_telephone" type="text" class="validate" name="home" required>
+                            <label for="icon_telephone">Дом</label>
+                        </div>
+                        <div class="input-field col s2">
+                            <i class="material-icons prefix">format_list_numbered</i>
+                            <input id="icon_telephone" type="number" class="validate" name="flat" required>
+                            <label for="icon_telephone">Квартира</label>
+                        </div>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="input-field col s8">
-                        <i class="material-icons prefix">streetview</i>
-                        <input id="icon_prefix" type="text" class="validate" name="street" required>
-                        <label for="icon_prefix">Улица</label>
+                    <button type="submit" class="btn btn-success">Оформить заказ</button>
+                </form>
+            </div>
+        {{else}}
+            <div class="row">
+                <form class="col s12" method="post" action="/cart/order">
+                    <input name="allPrice" value="{{allPrice}}" hidden>
+                    <div class="row">
+                        <div class="input-field col s6">
+                            <i class="material-icons prefix">person_outline</i>
+                            <input id="icon_prefix" type="text" class="validate" name="name" required>
+                            <label for="icon_prefix">Имя</label>
+                        </div>
+                        <div class="input-field col s6">
+                            <i class="material-icons prefix">phone</i>
+                            <input id="icon_telephone" type="tel" class="validate" name="tel" required>
+                            <label for="icon_telephone">Телефон</label>
+                        </div>
                     </div>
-                    <div class="input-field col s2">
-                        <i class="material-icons prefix">domain</i>
-                        <input id="icon_telephone" type="text" class="validate" name="home" required>
-                        <label for="icon_telephone">Дом</label>
+                    <div class="row">
+                        <div class="input-field col s8">
+                            <i class="material-icons prefix">streetview</i>
+                            <input id="icon_prefix" type="text" class="validate" name="street" required>
+                            <label for="icon_prefix">Улица</label>
+                        </div>
+                        <div class="input-field col s2">
+                            <i class="material-icons prefix">domain</i>
+                            <input id="icon_telephone" type="text" class="validate" name="home" required>
+                            <label for="icon_telephone">Дом</label>
+                        </div>
+                        <div class="input-field col s2">
+                            <i class="material-icons prefix">format_list_numbered</i>
+                            <input id="icon_telephone" type="number" class="validate" name="flat" required>
+                            <label for="icon_telephone">Квартира</label>
+                        </div>
                     </div>
-                    <div class="input-field col s2">
-                        <i class="material-icons prefix">format_list_numbered</i>
-                        <input id="icon_telephone" type="number" class="validate" name="flat" required>
-                        <label for="icon_telephone">Квартира</label>
-                    </div>
-                </div>
-            </form>
-        </div>
-        <div class="centered"><form method="post" action="/cart/order">
-            <button type="submit" class="btn btn-success">Оформить заказ</button>
-        </form></div>
+                    <button type="submit" class="btn btn-success">Оформить заказ</button>
+                </form>
+            </div>
         {{/if}}
+    {{/if}}
 
 </div>
 <br>
@@ -165,15 +211,21 @@
 <!--</footer>-->
 <!--JavaScript at end of body for optimized loading-->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+        crossorigin="anonymous"></script>
 <script>
     document.addEventListener('DOMContentLoaded', function () {
         const elements = document.querySelectorAll('.sidenav');
         M.Sidenav.init(elements);
     });
-    document.addEventListener('DOMContentLoaded', function() {
+    document.addEventListener('DOMContentLoaded', function () {
         const elements = document.querySelectorAll('.parallax');
         M.Parallax.init(elements);
     });
