--- a/views/register.hbs
+++ b/views/register.hbs
@@ -47,32 +47,32 @@
 <br><br>
 <div class="container">
     <div class="row">
-        <form class="col s12">
+        <form class="col s12" method="post">
             <div class="row">
                 <div class="input-field col s6">
                     <i class="material-icons prefix">email</i>
-                    <input id="email" type="email" class="validate" required>
+                    <input id="email" type="email" class="validate" name="email" required>
                     <label for="email">Email</label>
                 </div>
             </div>
             <div class="row">
                 <div class="input-field col s12">
                     <i class="material-icons prefix">lock_outline</i>
-                    <input id="password" type="password" class="validate" required>
+                    <input id="password" type="password" class="validate" name="password" required>
                     <label for="password">Пароль</label>
                 </div>
             </div>
                         <div class="row">
                             <div class="input-field col s6">
                                 <i class="material-icons prefix">tag_faces</i>
-                                <input id="icon_prefix" type="text" class="validate" required>
+                                <input id="icon_prefix" type="text" class="validate" name="name" required>
                                 <label for="icon_prefix">Имя</label>
                             </div>
                         </div>
                         <div class="row">
                             <div class="input-field col s6">
                                 <i class="material-icons prefix">phone</i>
-                                <input id="icon_telephone" type="tel" class="validate" required>
+                                <input id="icon_telephone" type="tel" class="validate" name="tel" required>
                                 <label for="icon_telephone">Телефон</label>
                             </div>
                         </div>
