admin and dashboard added

--- a/views/operator.hbs
+++ b/views/operator.hbs
@@ -21,6 +21,13 @@
         </div>
     </div>
     <br>
+    <div class="card" style="width: 18rem;">
+        <div class="card-body">
+            <h5 class="card-title">Категории товаров</h5>
+            <!--            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>-->
+            <a href="/operator/products" class="btn btn-info">Перейти к категориям</a>
+        </div>
+    </div>
     <br>
 {{#each orders}}
     <br>
