--- a/views/contacts.hbs
+++ b/views/contacts.hbs
@@ -25,10 +25,10 @@
             <li><a href="/cart"><i class="material-icons left">shopping_basket</i>Корзина</a></li>
             {{#if success}}
                 <li><a><i class="material-icons left">person_outline</i>{{userName}}</a></li>
-                {{else}}
+            {{else}}
                 <li><a href="/login"><i class="material-icons left">person_outline</i>Войти</a></li>
-                {{/if}}
-<!--            <li><a href="/login"><i class="material-icons left">person_outline</i>Войти</a></li>-->
+            {{/if}}
+            <!--            <li><a href="/login"><i class="material-icons left">person_outline</i>Войти</a></li>-->
             <li class="disabled"><a>+7(912)999-99-99</a></li>
         </ul>
         <form method="post" action="/find">
@@ -50,11 +50,11 @@
     <li class="disabled"><a>+7(912)999-99-99</a></li>
 </ul>
 <div class="parallax-container">
-<!--    <div class="row center">-->
-<!--        <div class="col s4 blue lighten-5">6-columns (one-half)</div>-->
-<!--        <div class="col s4 blue lighten-5">6-columns (one-half)</div>-->
-<!--        <div class="col s4 blue lighten-5">6-columns (one-half)</div>-->
-<!--    </div>-->
+    <!--    <div class="row center">-->
+    <!--        <div class="col s4 blue lighten-5">6-columns (one-half)</div>-->
+    <!--        <div class="col s4 blue lighten-5">6-columns (one-half)</div>-->
+    <!--        <div class="col s4 blue lighten-5">6-columns (one-half)</div>-->
+    <!--    </div>-->
     <div class="parallax">
         <img src="images/food.jpg"></div>
 </div>
@@ -70,55 +70,11 @@
 <!--    <div class="col s4">6-columns (one-half)</div>-->
 <!--</div>-->
 <div class="container">
-    <div class="section white">
-        <div class="row container">
-            <h2 class="header">Новые товары:</h2>
-        </div>
-    </div>
-    <div class="row row-cols-1 row-cols-md-3 center">
-        {{#each products}}
-            <form method="post" action="/add">
-                <input id="id" name="id" type="text" value="{{this.id}}" hidden>
-                <div class="col mb-4">
-                    <div class="card h-100">
-                        <img src="{{this.image}}">
-                        <div class="card-body">
-                            <h5 class="card-title">{{this.name}}</h5>
-                            <p class="card-text">{{this.description}}</p>
-                            <h2>{{this.price}} Р</h2>
-                            <a href="product/{{this.id}}" class="waves-effect waves-light btn blue lighten-4"><i class="material-icons left">info_outline</i>Подробнее</a>
-                            <button type="submit" class="btn btn-danger right"><i class="material-icons left">shopping_basket</i>Добавить</button>
-                        </div>
-                    </div>
-                </div>
-            </form>
-        {{/each}}
-    </div>
+<h1>Spun - сайт доставки домашней еды</h1>
+    <h2>Адрес: Москва, Проспект Мира 38</h2>
+    <h2>Телефон: +7(912)999-99-99</h2>
 </div>
-<footer class="page-footer grey darken-4 center">
-    <div class="container">
-        <div class="row">
-            <div class="col l6 s12">
-                <h5 class="white-text">О сайте</h5>
-                <p class="grey-text text-lighten-4">Spun - сайт доставки домашней еды.</p>
-            </div>
-            <div class="col l4 offset-l2 s12">
-                <h5 class="white-text">Ссылки</h5>
-                <ul>
-                    <li><a class="grey-text text-lighten-3" href="#!">Главная</a></li>
-                    <li><a class="grey-text text-lighten-3" href="#!">Контакты</a></li>
-                    <li><a class="grey-text text-lighten-3" href="#!">Товары</a></li>
-                    <li><a class="grey-text text-lighten-3" href="#!">Корзина</a></li>
-                </ul>
-            </div>
-        </div>
-    </div>
-    <div class="footer-copyright">
-        <div class="container">
-            © 2020 Двоеглазов Г.И., 171-331
-        </div>
-    </div>
-</footer>
+
 <!--JavaScript at end of body for optimized loading-->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
