fixed some bugs

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -44,8 +44,8 @@
 <ul class="sidenav" id="mobile-demo">
     <li><a href="/"><i class="material-icons left">home</i>Главная</a></li>
     <li><a href="/products"><i class="material-icons left">apps</i>Товары</a></li>
-    <li><a href=""><i class="material-icons left">contacts</i>Контакты</a></li>
-    <li><a href=""><i class="material-icons left">shopping_basket</i>Корзина</a></li>
+    <li><a href="/contacts"><i class="material-icons left">contacts</i>Контакты</a></li>
+    <li><a href="/cart"><i class="material-icons left">shopping_basket</i>Корзина</a></li>
     <li><a href="/login"><i class="material-icons left">person_outline</i>Войти</a></li>
     <li class="disabled"><a>+7(912)999-99-99</a></li>
 </ul>
