--- a/views/oper-products-delete.hbs
+++ b/views/oper-products-delete.hbs
@@ -51,7 +51,7 @@
                 <input type="text" name="carbohydrates" class="form-control" id="carbohydrates" value="{{this.carbohydrates}}" disabled>
             </div>
             <div class="form-group">
-                <label for="subjectArea">Категория</label>
+                <label for="subjectArea">Цена</label>
                 <input type="number" name="price" class="form-control" id="price" value="{{this.price}}" disabled>
             </div>
             <button type="submit" class="btn btn-danger">Удалить</button>
