--- a/views/oper-products-create.hbs
+++ b/views/oper-products-create.hbs
@@ -50,7 +50,7 @@
             <input type="text" name="carbohydrates" class="form-control" id="carbohydrates">
         </div>
         <div class="form-group">
-            <label for="subjectArea">Категория</label>
+            <label for="subjectArea">Цена</label>
             <input type="number" name="price" class="form-control" id="price">
         </div>
         <button type="submit" class="btn btn-info">Создать</button>
