--- a/views/oper-products-edit.hbs
+++ b/views/oper-products-edit.hbs
@@ -51,7 +51,7 @@
             <input type="text" name="carbohydrates" class="form-control" id="carbohydrates" value="{{this.carbohydrates}}">
         </div>
         <div class="form-group">
-            <label for="subjectArea">Категория</label>
+            <label for="subjectArea">Цена</label>
             <input type="number" name="price" class="form-control" id="price" value="{{this.price}}">
         </div>
         <button type="submit" class="btn btn-info">Изменить</button>
